swagger refactoring and minio endpoint protected
